@@ -1,3 +1,8 @@
+2007-03-07  William Jon McCann  <mccann@jhu.edu>
+
+	* daemon/gdmconsolekit.c (open_ck_session):
+	Update the CK parameter names.  Fixes #415181.
+
 2006-03-05  Brian Cameron  <brian.cameron@sun.com>
 
 	* config/Makefile.am, config/gdm.conf-custom.in, config/gdm.conf.in:
